<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/base_margin">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:labelFor="@id/etName"
        android:text="@string/character_name"
        app:layout_constraintBottom_toBottomOf="@+id/etName"
        app:layout_constraintEnd_toStartOf="@+id/etName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:lines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:labelFor="@id/sStatus"
        android:text="@string/character_status"
        app:layout_constraintBottom_toBottomOf="@+id/sStatus"
        app:layout_constraintEnd_toStartOf="@id/sStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <Spinner
        android:id="@+id/sStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvStatus"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        android:entries="@array/character_status_array"/>

    <TextView
        android:id="@+id/tvSpecies"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:labelFor="@id/etSpecies"
        android:text="@string/character_species"
        app:layout_constraintBottom_toBottomOf="@+id/etSpecies"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etSpecies"
        app:layout_constraintEnd_toStartOf="@+id/etSpecies"/>

    <EditText
        android:id="@+id/etSpecies"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="textShortMessage"
        android:lines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvSpecies"
        app:layout_constraintTop_toBottomOf="@+id/sStatus" />

    <TextView
        android:id="@+id/tvType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/character_type"
        android:labelFor="@id/etType"
        app:layout_constraintBottom_toBottomOf="@+id/etType"
        app:layout_constraintEnd_toStartOf="@+id/etType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etType" />

    <EditText
        android:id="@+id/etType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="textShortMessage"
        android:lines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvType"
        app:layout_constraintTop_toBottomOf="@+id/etSpecies" />

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:labelFor="@id/sGender"
        android:text="@string/character_gender"
        app:layout_constraintBottom_toBottomOf="@+id/sGender"
        app:layout_constraintEnd_toStartOf="@+id/sGender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sGender" />

    <Spinner
        android:id="@+id/sGender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/character_gender_array"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvGender"
        app:layout_constraintTop_toBottomOf="@+id/etType" />
</androidx.constraintlayout.widget.ConstraintLayout>